--- a/microservices/frontend/src/main/resources/application.yml
+++ b/microservices/frontend/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   aop:
     proxy-target-class: true
   redis:
-    host: klhauser-vm2.intern.epages.de
+    host: localhost
     port: 6379
     default_expire_time: 86400
 
