--- a/microservices/discovery/build.gradle
+++ b/microservices/discovery/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     compile("org.springframework.cloud:spring-cloud-netflix-eureka-server")
+    compile("org.springframework.boot:spring-boot-starter-security")
 }
