--- a/microservices/authserver/build.gradle
+++ b/microservices/authserver/build.gradle
@@ -1,10 +1,13 @@
-// START: have wro files available
+// START: have webapp folder available during rollout
 apply plugin: 'application'
-
-applicationDistribution.into('wro') {
-    from ('src/main/wro')
+applicationDistribution.into('WebContent') {
+    from ('src/main/webapp')
 }
-// END: have wro files available
+startScripts << {
+    unixScript.text = unixScript.text.replace('CLASSPATH=', 'CLASSPATH=$APP_HOME/WebContent:')
+    windowsScript.text = windowsScript.text.replace('set CLASSPATH=', 'set CLASSPATH=$APP_HOME\\WebContent;')
+}
+// END: have webapp folder available during rollout
 
 ext {
     dbUnitVersion = "2.5.1"
@@ -14,9 +17,16 @@ ext {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
 
+    compile("org.springframework.session:spring-session:1.1.0.BUILD-SNAPSHOT")
+    compile("org.springframework.data:spring-data-redis:1.7.0.BUILD-SNAPSHOT")
+    compile("redis.clients:jedis:2.8.0")
+
     compile("org.springframework.boot:spring-boot-starter-security")
+    compile("org.springframework.cloud:spring-cloud-starter-security")
     compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+    compile("org.springframework.security.oauth:spring-security-oauth2")
     compile("org.springframework.security:spring-security-jwt")
+
     compile("org.springframework.boot:spring-boot-starter-freemarker")
 
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -26,9 +36,6 @@ dependencies {
     compile("org.apache.commons:commons-lang3:3.0")
     compile("joda-time:joda-time")
     compile("javax.mail:mail:1.4.7")
-
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-joda")
-    compile("com.fasterxml.jackson.datatype:jackson-datatype-hibernate4:2.4.0")
 
     testCompile("org.dbunit:dbunit:${dbUnitVersion}")
     testCompile("com.github.springtestdbunit:spring-test-dbunit:${springTestDbunitVersion}")
