--- a/microservices/frontend/build.gradle
+++ b/microservices/frontend/build.gradle
@@ -1,3 +1,14 @@
+// START: have webapp folder available during rollout
+apply plugin: 'application'
+applicationDistribution.into('WebContent') {
+    from ('src/main/webapp')
+}
+startScripts << {
+    unixScript.text = unixScript.text.replace('CLASSPATH=', 'CLASSPATH=$APP_HOME/WebContent:')
+    windowsScript.text = windowsScript.text.replace('set CLASSPATH=', 'set CLASSPATH=$APP_HOME\\WebContent;')
+}
+// END: have webapp folder available during rollout
+
 ext {
     vaadinVersion = "7.6.0.beta1"
     vaadinSpringBootVersion = "1.0.0"
@@ -23,11 +34,15 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-hateoas")
 
-    compile("org.springframework.session:spring-session")
-    compile("org.springframework.boot:spring-boot-starter-redis")
-    //compile("org.springframework.session:spring-session-data-redis:1.0.2.RELEASE")
+    compile("org.springframework.session:spring-session:1.1.0.BUILD-SNAPSHOT")
+    compile("org.springframework.data:spring-data-redis:1.7.0.BUILD-SNAPSHOT")
+    compile("redis.clients:jedis:2.8.0")
 
     compile("org.springframework.security.oauth:spring-security-oauth2")
+
+    //required for deserializing jpa objects which are in the spring-session
+    compile("org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final")
+    compile("org.hibernate:hibernate-entitymanager:4.3.7.Final")
 
     compile("com.fasterxml.jackson.datatype:jackson-datatype-joda")
 }
