--- a/microservices/edge/src/main/resources/application.yml
+++ b/microservices/edge/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  use-forward-headers: true
-
 debug: true
 
 spring:
@@ -19,9 +16,18 @@ zuul:
     user:
       path: /user/**
       url: http://localhost:8080/authserver/uaa/user
-    frontend:
+    frontend1:
+      path: /ui/**
+      serviceId: frontend
+      stripPrefix: false
+    frontend2:
       path: /frontend/**
-      url: http://localhost:8081
+      serviceId: frontend
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 
 hystrix:
   command:
