--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
+        classpath 'se.transmode.gradle:gradle-docker:1.2'
     }
 }
 
@@ -29,6 +30,8 @@ subprojects {
     apply plugin: 'spring-boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'maven'
+    apply plugin: 'application'
+    apply plugin: 'docker'
 
     springBoot {
         requiresUnpack = ['com.netflix.eureka:eureka-core','com.netflix.eureka:eureka-client']
@@ -58,7 +61,7 @@ subprojects {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 
-    ext {
+	ext {
         springBootVersion = "1.3.1.BUILD-SNAPSHOT"
     }
 
@@ -109,6 +112,13 @@ subprojects {
     check.dependsOn integrationTest
     integrationTest.mustRunAfter test
     // END: integration test with gradle
+
+	def DOCKER_REPO = "klhauser"
+    task buildContainer(type: Docker) {
+		tagVersion = 'latest'
+	    tag = DOCKER_REPO + "/microservice4vaadin-" + jar.baseName.replace('microservices/','')
+	    push = true
+	}
 }
 
 task wrapper(type: Wrapper) {
