--- a/microservices/discovery/build.gradle
+++ b/microservices/discovery/build.gradle
@@ -1,3 +1,15 @@
+jar {
+    baseName = 'discovery'
+    version = '0.0.1-SNAPSHOT'
+}
+distDocker {
+    exposePort 8761
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+docker {
+    baseImage = 'java:8'
+}
+
 dependencies {
     compile("org.springframework.cloud:spring-cloud-netflix-eureka-server")
     compile("org.springframework.boot:spring-boot-starter-security")
