--- a/microservices/discovery/src/main/resources/application.yml
+++ b/microservices/discovery/src/main/resources/application.yml
@@ -7,3 +7,15 @@ management:
 security:
   basic:
     enabled: false
+
+---
+# For deployment in Docker containers
+spring:
+  profiles: docker
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://discovery:8761/eureka/
