--- a/microservices/edge/build.gradle
+++ b/microservices/edge/build.gradle
@@ -1,3 +1,15 @@
+jar {
+    baseName = 'edge'
+    version = '0.0.1-SNAPSHOT'
+}
+distDocker {
+    exposePort 8080
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+docker {
+    baseImage = 'java:8'
+}
+
 dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-zuul")
 
