--- a/microservices/hystrixdashboard/build.gradle
+++ b/microservices/hystrixdashboard/build.gradle
@@ -1,3 +1,15 @@
+jar {
+    baseName = 'hystrixdashboard'
+    version = '0.0.1-SNAPSHOT'
+}
+distDocker {
+    exposePort 7979
+    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
+}
+docker {
+    baseImage = 'java:8'
+}
+
 dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-hystrix-dashboard")
 }
