--- a/microservices/authserver/build.gradle
+++ b/microservices/authserver/build.gradle
@@ -7,7 +7,7 @@ distDocker {
     setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
 }
 docker {
-    baseImage = 'java:8'
+    baseImage = 'develar/java:8u45-dcevm'
 }
 
 // START: have webapp folder available during rollout
