--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = "1.3.1.BUILD-SNAPSHOT"
+        springBootVersion = "1.3.5.BUILD-SNAPSHOT"
     }
     repositories {
         mavenCentral()
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.7.RELEASE")
         classpath 'se.transmode.gradle:gradle-docker:1.2'
     }
 }
@@ -26,7 +26,7 @@ ext['spring-data-releasetrain.version'] = 'Gosling-RELEASE'
 // all subprojects
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'idea'
+	apply plugin: 'idea'
     apply plugin: 'spring-boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'maven'
@@ -46,7 +46,7 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.M4'
+            mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:Brixton.SR1'
         }
     }
 
@@ -61,14 +61,10 @@ subprojects {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 
-  ext {
-        springBootVersion = "1.3.1.BUILD-SNAPSHOT"
-    }
-
     dependencies {
         compile("org.springframework.boot:spring-boot-starter-web")
         //compile("org.springframework.boot:spring-boot-starter-undertow:${springBootVersion}")
-        compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
+        //compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
 
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
 
@@ -127,5 +123,5 @@ subprojects {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.8'
+    gradleVersion = '2.14'
 }
