some new ui stuff for registration and landing page

--- a/microservices/authserver/src/main/resources/application.yml
+++ b/microservices/authserver/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
   # DataSource settings: set here your own configurations for the database
   # connection.
   datasource:
-    url: jdbc:mysql://localhost:3306/microservice4vaadin_authserverdb
+    url: jdbc:mysql://localhost:3306/microservice4vaadin_authserverdb?useSSL=false
     username: root
     password:
     driverClassName: com.mysql.jdbc.Driver
