--- a/microservices/edge/build.gradle
+++ b/microservices/edge/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     compile("org.webjars:jquery:1.11.1")
     compile("org.webjars:angularjs:1.2.26")
+    compile("org.webjars.bower:angular-resource:1.2.7")
     compile("org.webjars:bootstrap:3.2.0")
 
     compile("org.springframework.session:spring-session:1.2.0.BUILD-SNAPSHOT")
