--- a/microservices/edge/src/main/resources/application.yml
+++ b/microservices/edge/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   aop:
     proxy-target-class: true
   redis:
-    host: localhost
+    host: 192.168.99.100
     port: 6379
     default_expire_time: 86400
 
@@ -16,6 +16,9 @@ zuul:
     user:
       path: /user/**
       url: http://localhost:8080/authserver/uaa/user
+    register:
+      path: /register/**
+      url: http://localhost:8080/authserver/uaa/register      
     frontend1:
       path: /ui/**
       serviceId: frontend
@@ -23,7 +26,7 @@ zuul:
     frontend2:
       path: /frontend/**
       serviceId: frontend
-
+      
 eureka:
   client:
     serviceUrl:
@@ -61,8 +64,8 @@ security:
 
 logging:
   level:
-    org.springframework.security: DEBUG
-    org.springframework.web: DEBUG
+    org.springframework.security: INFO
+    org.springframework.web: INFO
     com.netflix.discovery: 'OFF'
 
 ---
