--- a/microservices/edge/build.gradle
+++ b/microservices/edge/build.gradle
@@ -7,7 +7,7 @@ distDocker {
     setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
 }
 docker {
-    baseImage = 'develar/java:8u45-dcevm'
+    baseImage = 'anapsix/alpine-java:jre8'
 }
 
 dependencies {
