some basics for the AM-Home 3.0 page

--- a/microservices/authserver/src/main/resources/application.yml
+++ b/microservices/authserver/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 server:
   contextPath: /uaa
   port: 7777
-
+  ssl:
+    key-store: classpath:keystore.jks
+    key-store-password: example
+    key-password: example
+    
 email:
   username: USERNAME
   password: PASSWORD
