--- a/microservices/frontend/src/main/resources/application.yml
+++ b/microservices/frontend/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
   aop:
     proxy-target-class: true
   redis:
-    host: localhost
+    host: docker.local
     port: 6379
     pool:
       max-wait: -1
