--- a/microservices/frontend/src/main/resources/application.yml
+++ b/microservices/frontend/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 server:
-  host: localhost
   port: 8081
   contextPath: /ui
   use-forward-headers: true
   ssl:
     key-store: classpath:keystore.jks
     key-store-password: example
-    key-password: example  
+    key-password: example
+  session:
+    persistent: false
 
 debug: true
 
@@ -18,11 +19,6 @@ spring:
   redis:
     host: localhost
     port: 6379
-    pool:
-      max-wait: -1
-      max-active: -1
-      max-idle: -1
-      min-idle: 16    
 
 security:
   sessions: NEVER
