--- a/microservices/authserver/build.gradle
+++ b/microservices/authserver/build.gradle
@@ -12,6 +12,7 @@ docker {
 
 ext {
     dbUnitVersion = "2.5.1"
+    flywayVersion = "4.0.3"
     springTestDbunitVersion = "1.2.1"
 }
 
@@ -32,7 +33,7 @@ dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     runtime("mysql:mysql-connector-java")
-    compile("org.flywaydb:flyway-core");
+    compile("org.flywaydb:flyway-core:${flywayVersion}");
 
     compile("org.apache.commons:commons-lang3:3.0")
     compile("joda-time:joda-time")
