use jdal's serialization proxy to revive missing controllers/services after deserialization

--- a/microservices/frontend/src/main/resources/application.yml
+++ b/microservices/frontend/src/main/resources/application.yml
@@ -30,7 +30,7 @@ management:
 
 logging:
   level:
-    lessor: INFO
+    microservices4vaadin: INFO
     org.springframework.security: INFO
     com.netflix.discovery: 'OFF'
 
